# p1faker

./: CMakeLists.txt  README.md  alpha.cpp  config.h  core.cpp  core.h  logf.h  main.cpp  p1gen.drawio  red.cpp  settings.h  sma.cpp  test.cpp  www.cpp  www.h
cmake/: armv6-rpi-bullseye-gnueabihf2.cmake
public/: index.css  index.html  index.js  p1out.html  simulator.html  simulator.js
src/: config.cpp  config.h  core.cpp  core.h  logf.cpp  logf.h  modbus.cpp  modbus.h  monitor.cpp  mutex_protected.h  p1out.cpp  policies.cpp  schedule.cpp  service_discovery.cpp  service_discovery.h  settings.cpp  settings.h  simulator.cpp  sma.cpp  www.cpp  www.h
